<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.praticas.matheus.easyride.TelaPrincipal">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cadastrarCarona"
        android:id="@+id/cadastrarCarona"
        android:layout_marginTop="67dp"
        android:onClick="cadastrarCarona"
        android:layout_below="@+id/menuTV"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/avaliarCarona"
        android:id="@+id/avaliarCarona"
        android:onClick="avaliarCarona"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buscarCarona"
        android:id="@+id/buscarCarona"
        android:onClick="buscarCarona"
        android:layout_below="@+id/avaliarCarona"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="83dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/menu"
        android:id="@+id/menuTV"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
